--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -87,7 +87,7 @@ Rails/FilePath:
   Enabled: false
 
 Rails/SaveBang:
-  Enabled: true
+  Enabled: false
 
 Style/BlockDelimiters:
   EnforcedStyle: braces_for_chaining
